--- a/index.html
+++ b/index.html
@@ -23,55 +23,54 @@
 	<div class="overview">
 		<h2 id="ovrhead">SUSTAINABLE CITIES AND COMMUNITIES</h2>
 		<h3 id="ovrcont">The purpose of this website is to introduce the ideas of how each sub-theme covered can relate
-			to theme of "SUSTAINABLE CITIES AND COMMUNITIES".</p>
+			to theme of "SUSTAINABLE CITIES AND COMMUNITIES".<br><br>Each box below when clicked will take you to the associated page.</p>
 	</div>
-
 	<div style="text-align:center">
 		<div class="pagebox" id="leftpage">
 			<a href="lee1.html" id="link1"></a>
-			<h2>Public Safety 1</h2>
+			<h2>Road Safety</h2>
 			<h3>This page covers the road safety aspect of public safety.</h3>
 		</div>
 
 		<div class="pagebox">
 			<a href="lee2.html" id="link2"></a>
-			<h2>Public Safety 2</h2>
+			<h2>Law Enforcement</h2>
 			<h3>This page covers the law enforcement aspect of public safety.</h3>
 		</div>
 
 
 		<div class="pagebox" id="rightpage">
 			<a href="nat1.html" id="link3"></a>
-			<h2>Jobs 1</h2>
-			<h3>Short paragraph about page, possible image and whatnot</h3>
+			<h2>Everyday jobs</h2>
+			<h3>This page covers how computer science can be helpful in people's everyday jobs</h3>
 		</div>
 		<div class="pagebox" id="leftpage">
 			<a href="nat2.html" id="link4"></a>
-			<h2>Jobs 2</h2>
-			<h3>Short paragraph about page, possible image and whatnot</h3>
+			<h2>Reducing workload</h2>
+			<h3>This page covers the positive effects of reducing work load in jobs</h3>
 		</div>
 
 		<div class="pagebox" id="page5">
 			<a href="lex1.html" id="link5"></a>
-			<h2>Pollution 1</h2>
-			<h3>Short paragraph about page, possible image and whatnot</h3>
+			<h2>Reduced waste</h2>
+			<h3>This page covers the reduction of waste and possible disadvantages of computation</h3>
 		</div>
 
 
 		<div class="pagebox" id="rightpage">
 			<a href="lex2.html" id="link6"></a>
-			<h2>Pollution 2</h2>
-			<h3>Short paragraph about page, possible image and whatnot</h3>
+			<h2>Energy savings</h2>
+			<h3>This page covers saving energy, and how it helps reduce Pollution</h3>
 		</div>
 		<div class="pagebox" id="page7">
 			<a href="douglas1.html" id="link7"></a>
-			<h2>Social Media 1</h2>
+			<h2>Social media advantages & disadvantages</h2>
 			<h3>This page covers the advantages and disadvantages of social media.</h3>
 		</div>
 
 		<div class="pagebox" id="page8">
 			<a href="douglas2.html" id="link8"></a>
-			<h2>Social Media 2</h2>
+			<h2>Daily use and branding with social media</h2>
 			<h3>This page talks about daily life and branding in regard to social media.</h3>
 		</div>
 	</div>
