--- a/lee2.html
+++ b/lee2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Public Safety: Road safety</title>
+        <title>Public Safety</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Public Safety 2</h1>
+            <h1 class="title">Public Safety: Law Enforcement</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="rightbox">
-            <p>Another big aspect regarding law enforcement is CCTV systems. Most cities are widely covered by CCTV cameras, both privately within businesses and publicly on streets. This kind of surveillance is a staple in crime-stopping as it not only can be used as evidence to place a suspect at a crime scene, but the mere presence of a camera can be enough to dissuade people from committing a crime in the first place. Facial recognition systems are even in use in some places, which aids humans in identifying suspects on video and providing information about them. This can save police time and resources, especially considering the large video files produced by CCTV cameras, as it saves humans from having to closely analyse long videos. In a study of 251,195 crimes recorded by British Transport Police that occurred on the British railway network between 2011 and 2015, it was found that CCTV was available to investigators in 45% of cases and its use proved successful in 65% of those cases where it was available. In this case, the CCTV was regarded as useful where it increased the chances of crimes being solved for all crime types except drugs/weapons possession and fraud (Ashby, M.P.J., et al. 2017). </p>
+            <p>Another big aspect regarding law enforcement is CCTV systems. Most cities are widely covered by CCTV cameras, both privately within businesses and publicly on streets. This kind of surveillance is a staple in crime-stopping as it not only can be used as evidence to place a suspect at a crime scene, but the mere presence of a camera can be enough to dissuade people from committing a crime in the first place. Facial recognition systems are even in use in some places, which aids humans in identifying suspects on video and providing information about them. This can save police time and resources, especially considering the large video files produced by CCTV cameras, as it saves humans from having to closely analyse long videos. In a study of 251,195 crimes recorded by British Transport Police that occurred on the British railway network between 2011 and 2015, it was found that CCTV was available to investigators in 45% of cases and its use proved successful in 65% of those cases where it was available. In this case, the CCTV was regarded as useful where it increased the chances of crimes being solved for all crime types except drugs/weapons possession and fraud <i>(Ashby, M.P.J., et al. 2017)(5)</i>. </p>
         </div>
         <br>
         <footer>
