--- a/lex1.html
+++ b/lex1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title</title>
+        <title>Pollution</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Pollution 1</h1>
+            <h1 class="title">Pollution: Reduced waste</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         </div>
         <div class="leftbox">
             <p id="quote">'Computer modelling, simulation and machine learning have been incorporated by computer scientists in partnership with environmental scientists to employ an array of information technology
-                 tools at their disposal to help fight climate change' (4)</p>
+                 tools at their disposal to help fight climate change' (12)</p>
             <p>Repeated simulations over thousands of iterations paired with machine learning allows algorithms to best optimize a solution to a problem, such as creating more efficient insulation in a home during
                 the colder months, whilst also keeping your home cooler during the summer. This is excellent for communities as it allows for more compact housing, not wasted on heat, and is also excellent for 
                 the environment, as excessive heat is reduced, slowing the rapid effects of global warming. 
@@ -36,7 +36,7 @@
             <p>. AI can also be incorporated into kitchens, too. Winnow is a great example of this, expanding upon a great innovation that is helpful to a lot of people. By reducing food waste, not only can we 
                 reduce environmental impact from food waste, but we can also increase the longevity of our kitchens and the effectiveness of food. This allows us to feed countless more people in 
                 our communities, as food would become far more available to those less fortunate that need it.</p>
-                <p id ="quote">‘One company that is using AI to reduce waste is Winnow. Winnow has developed an AI-powered system that can help commercial kitchens reduce waste by up to 50%’ (5)</p>
+                <p id ="quote">‘One company that is using AI to reduce waste is Winnow. Winnow has developed an AI-powered system that can help commercial kitchens reduce waste by up to 50%’ (13)</p>
                 <p>It doesn't stop there. With AI in other rooms, you can use them to improve quality of living at less cost. For example, using a similar type of AI to reduce water wasted in the bathroom or kitchen, or
                 to reduce or change temperatures of specific rooms, depending on if someone is present, or by set parameters.
             </p>
@@ -44,8 +44,8 @@
         <br>
         <div class="leftbox">
             <p>Though, computation does not come without its own risks. Even though it has brought many new opportunities and have undeniably made our lives far more comfortable, 
-                it is still a double-edged sword, as it requires many resources to create and maintain, for example, <i>‘data centres and data transmission networks are responsible 
-                for 1% of global energy related to Greenhouse emissions’ (6)</i>, and that’s just data centres and transmission networks, a small part of our current computational 
+                it is still a double-edged sword, as it requires many resources to create and maintain, for example, as stated on iea: <i>‘data centres and data transmission networks are responsible 
+                for 1% of global energy related to Greenhouse emissions’ (14)</i>, and that’s just data centres and transmission networks, a small part of our current computational 
                 toolbox. There’s also a stigma going around that artificial intelligence may ‘go rogue’ and attempt to kill the entire human species, which brings fear into the 
                 hearts of our communities, dividing them and slowing progress into the field of artificial intelligence. </div>
         <br>
