--- a/nat1.html
+++ b/nat1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>Jobs</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Jobs 1</h1>
+            <h1 class="title">Jobs: Everyday Jobs</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -32,7 +32,7 @@
                 system which heavily depends on software and information systems which are easy to access and 
                 simple to use. This is highlighted in an investigation conducted by the Office for National Statistics
                 which explains that between February 2022 and May 2022 the percentage of hybrid workers
-                increased from 13% to 24% showing a continuous growth in the popularity of hybrid working. (1)
+                increased from 13% to 24% showing a continuous growth in the popularity of hybrid working. (16)
                 This reinforces the point that there is an ever-growing demand for computer scientists to to constantly
                 update and create improved software to allow people to communicate, work and ultimately continue 
                 to grow in their own field. In addition to hybrid working, the use of software has been utilised in
@@ -54,7 +54,7 @@
                 and shared instantly significantly reducing production time. In addition, new buildings are much
                 safer thanks to the testing that can be conducted on building models in a virtual environment. “<i>In
                 developing countries, poor quality construction has lead to spontaneous building collapse and,
-                during earthquakes, to major disaster</i>”(2) Therefor this greatly benefits developing countries that
+                during earthquakes, to major disaster</i>”(17) Therefor this greatly benefits developing countries that
                 may be frequent victims of natural disasters as buildings designed through this software are far less
                 likely to collapse and be hazardous to those within its vicinity.     
             </p>
@@ -65,7 +65,7 @@
                 Allowing computer science to change healthcare systems will greatly benefit a city. “<i>On average
                 across these OECD countries, the median waiting times for more minor surgery like cataract
                 operation was 95 days in 2018, and longer for more major surgery like hip replacement (110 days)
-                and knee replacement (140 days).</i>” (3) With most current healthcare systems on their knees it is
+                and knee replacement (140 days).</i>” (18) With most current healthcare systems on their knees it is
                 crucial that we allow computer science to make changes. Creating new databases and information
                 storage systems will lead to shorter waiting times, better accessibility for the less fortunate and
                 overall better safety for all. With the use of robotically assisted surgeries, diagnostics and
