--- a/douglas1.html
+++ b/douglas1.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Social Media</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 
 <body>
     <div class="stickymain">
-        <h1 class="title">Social Media 1</h1>
+        <h1 class="title">Social Media: Advantages and Disadvantages</h1>
         <nav>
             <div class="topnav" id="navb">
                 <a href="index.html">Home</a>
