--- a/lee1.html
+++ b/lee1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Public Safety 1</title>
+        <title>Public Safety</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Public Safety: Road safety</h1>
+            <h1 class="title">Public Safety: Road Safety</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="leftbox">
-            <p>One aspect of public safety that has progressed massively from computer science and will continue to be is road safety. Road accidents are a key problem regarding sustainable cities and communities, as roads are vital for connecting cities and allowing vehicular access to locations within. Information from the World Health Organisation says that road-related incidents cause more than 1.35 million deaths per year, with 93% of them occurring in developing countries (Eskandari Torbaghan et al., 2022).</p>
+            <p>One aspect of public safety that has progressed massively from computer science and will continue to be is road safety. Road accidents are a key problem regarding sustainable cities and communities, as roads are vital for connecting cities and allowing vehicular access to locations within. Information from the World Health Organisation says that road-related incidents cause more than 1.35 million deaths per year, with 93% of them occurring in developing countries <i>(Eskandari Torbaghan et al., 2022)(6)</i>.</p>
         </div>
 
         <div class="rightbox">
@@ -31,7 +31,7 @@
         </div>
 
        <div class="leftbox">
-            <p>Outwith the actual vehicles, there are many technological implementations that can be used to keep roads safe in communities. A major one is traffic light systems, in which computer science can be used to make smart traffic lights that adapt to sensory information, making light switching more efficient and streamlining traffic, and also make traffic light systems consider congestion and road accidents, which traditional lights do not do (Ghazal, B. et al., 2016). Congestion is a big problem in cities that can cause surprisingly large time and financial losses. Research by INRIX in 2018 shows that, in Istanbul and Moscow, the amount of time lost to road congestion for drivers was 210 and 157 hours, respectively. In Boston, congestion resulted in 164 of lost time for drivers, with losses per driver reaching $2,291 and city damages as high as $4.1 billion. (Nur Aulia Yusuf, A. et al., 2020). With smart traffic lights, it is expected that they can help decrease congestion and make light switching and traffic flow much more efficient compared to the traditional system, which is simply run on a timer, not allowing consideration for any other circumstances.</p>
+            <p>Outwith the actual vehicles, there are many technological implementations that can be used to keep roads safe in communities. A major one is traffic light systems, in which computer science can be used to make smart traffic lights that adapt to sensory information, making light switching more efficient and streamlining traffic, and also make traffic light systems consider congestion and road accidents, which traditional lights do not do <i>(Ghazal, B. et al., 2016)(7)</i>. Congestion is a big problem in cities that can cause surprisingly large time and financial losses. Research by INRIX in 2018 shows that, in Istanbul and Moscow, the amount of time lost to road congestion for drivers was 210 and 157 hours, respectively. In Boston, congestion resulted in 164 of lost time for drivers, with losses per driver reaching $2,291 and city damages as high as $4.1 billion. <i>(Nur Aulia Yusuf, A. et al., 2020)(8)</i>. With smart traffic lights, it is expected that they can help decrease congestion and make light switching and traffic flow much more efficient compared to the traditional system, which is simply run on a timer, not allowing consideration for any other circumstances.</p>
        </div>
 
         <br>
