--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 	<div class="overview">
 		<h2 id="ovrhead">SUSTAINABLE CITIES AND COMMUNITIES</h2>
-		<h3 id="ovrcont">The purpose of this website is to introduce the ideas of how each sub-theme covered can relate
-			to theme of "SUSTAINABLE CITIES AND COMMUNITIES".<br><br>Each box below when clicked will take you to the associated page.</p>
+		<h3 id="ovrcont">United Nation’s goal 11 aims to make all cities a better place to live regardless of wealth. Computer Science will play a substantial role in achieving this goal. As so many cities grow more dependant on computer systems it is clear that optimising them will come with great results. This will be done through an array of means including making good use of social media, reducing pollution, improving public safety and making keys changes to people jobs for the better..<br><br>Each box below when clicked will take you to the associated page.</p>
 	</div>
 	<div style="text-align:center">
 		<div class="pagebox" id="leftpage">
