--- a/lex1.html
+++ b/lex1.html
@@ -33,7 +33,7 @@
         </div>
         <br>
         <div class="rightbox">
-            <p>. AI can also be incorporated into kitchens, too. Winnow is a great example of this, expanding upon a great innovation that is helpful to a lot of people. By reducing food waste, not only can we 
+            <p>AI can also be incorporated into kitchens, too. Winnow is a great example of this, expanding upon a great innovation that is helpful to a lot of people. By reducing food waste, not only can we 
                 reduce environmental impact from food waste, but we can also increase the longevity of our kitchens and the effectiveness of food. This allows us to feed countless more people in 
                 our communities, as food would become far more available to those less fortunate that need it.</p>
                 <p id ="quote">‘One company that is using AI to reduce waste is Winnow. Winnow has developed an AI-powered system that can help commercial kitchens reduce waste by up to 50%’ (13)</p>
